# secretMan

./: .env.example  .gitattributes  .gitignore  AGENT.md  README.md  main.py  pyproject.toml
docs/: auth-and-encryption.md  cli-guide.md
scripts/: install.py  uninstall.py
src/secrets_manager/cli/: delete.py  fetch.py  upload.py
src/secrets_manager/utils/: aws_client.py  helpers.py
